<resources>
    <drawable name="gray">#EDEDED</drawable>
    <string name="title_login">欢迎使用</string>
    <string name="app_name">ProjectManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="login_login">登 录</string>
    <string name="login_register">注 册</string>
    <string name="title_account">账 号 :</string>
    <string name="register_account">Email*</string>
    <string name="title_password">密 码 :</string>
    <string name="register_password">Password*</string>
    <string name="keep_state">记住账号密码</string>
    <string name="auto_login">自动登录</string>
    <string name="register_title">填写个人信息</string>
    <string name="repeat_password">重 复 密 码 :</string>
    <string name="title_nickname">昵 称 :</string>
    <string name="register_nickname">Nickname</string>
    <string name="title_cellphone">联 系 方 式 :</string>
    <string name="register_phone_number">Phone Number</string>
    <string name="title_job">职 位 :</string>
    <string name="register_position">Position</string>
    <string name="title_synopsis">个 人 简 介 :</string>
    <string name="register_synopsis">Introduce yourself briefly !</string>
    <string name="create_project">创建项目</string>
    <string name="add_contact">添加联系人</string>
    <string name="navigation_my">我的</string>
    <string name="navigation_contact">联系人</string>
    <string name="navigation_home">动态</string>
    <string name="navigation_project">项目</string>
    <string name="menu_home">我的动态</string>
    <string name="menu_project">我的项目</string>
    <string name="menu_contact">联系人</string>
    <string name="menu_my">个人中心</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_project_title">填写项目信息</string>
    <string name="project_name">项 目 名 称 :</string>
    <string name="project_end_time">截 止 时 间 :</string>
    <string name="project_plan">项 目 计 划 :</string>
    <string name="project_synopsis">项 目 简 介 :</string>
    <string name="hint_project_name">Project Name*</string>
    <string name="hint_project_end_time">End Date*</string>
    <string name="hint_project_plan">Introduce the project plan briefly !</string>
    <string name="hint_project_synopsis">Introduce your project briefly !</string>
    <string name="about_us">关于我们</string>
    <string name="setting">账号设置</string>
    <string name="info">个人信息</string>
    <string name="my_task">我的任务</string>
    <string name="member_detail">个人详情</string>
    <string name="project_detail">项目详情</string>
    <string name="edit_project">编辑项目</string>
    <string name="project_rate">项 目 进 度 :</string>
    <string name="hint_project_rate">Progress Rate*</string>
    <string name="save_edit">保存编辑</string>
    <string name="edit_project_title">编辑项目信息</string>
    <string name="invite_member">邀请成员</string>
    <string name="create_task_title">填写任务信息</string>
    <string name="task_name">任 务 名 称 :</string>
    <string name="task_start_time">起 始 时 间 :</string>
    <string name="task_end_time">截 止 时 间 :</string>
    <string name="hint_project_start_time">Start Date*</string>
    <string name="task_hour">预 估 工 时 :</string>
    <string name="task_plan">任 务 内 容 :</string>
    <string name="task_emergent">紧 急 程 度 :</string>
    <string name="create_task">发布任务</string>
    <string name="claim_username">指 派 成 员 :</string>
    <string name="hint_claim_username">请输入用户uid</string>
    <string name="hint_task_name">Task Name*</string>
    <string name="hint_task_plan">Introduce the task plan briefly !</string>
</resources>