<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProjectActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/mid_green"
                android:text="@string/create_project_title"/>

            <LinearLayout style="@style/LoginBar">

                <TextView
                    style="@style/RegisterTitle"
                    android:text="@string/project_name" />

                <EditText
                    android:id="@+id/et_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:hint="@string/hint_project_name"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout style="@style/LoginBar">

                <TextView
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/project_end_time"/>

                <TextView
                    style="@style/RegisterTitle"
                    android:id="@+id/date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:hint="@string/hint_project_end_time" />

            </LinearLayout>


            <LinearLayout style="@style/RegisterBar">

                <TextView
                    style="@style/RegisterTitle"
                    android:text="@string/project_plan" />

            </LinearLayout>

            <LinearLayout style="@style/LoginBar">

                <EditText
                    android:id="@+id/et_project_plan"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/edit_text"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:padding="5dp"
                    android:hint="@string/hint_project_plan"/>

            </LinearLayout>

            <LinearLayout style="@style/LoginBar">

                <TextView
                    style="@style/RegisterTitle"
                    android:text="@string/project_synopsis" />

            </LinearLayout>

            <LinearLayout style="@style/LoginBar">

                <EditText
                    android:id="@+id/et_project_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/edit_text"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:padding="5dp"
                    android:hint="@string/hint_project_synopsis"/>

            </LinearLayout>

            <Button
                android:id="@+id/create_project"
                style="@style/Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/create_project" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>